--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "cra-template": "1.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-redux": "^7.2.6",
+    "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
